--- a/templates/appartment/appartment_form.html.twig
+++ b/templates/appartment/appartment_form.html.twig
@@ -11,11 +11,11 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    {{ form_start(form) }}
-        {{ form_row(form) }}
+    {{ form_start(appartmentForm) }}
+        {{ form_row(appartmentForm) }}
             <button type="submit" class="btn">Envoyez !</button>
 
-    {{ form_end(form) }}
+    {{ form_end(appartmentForm) }}
 
 </div>
 {% endblock %}
