--- a/templates/partials/_card.html.twig
+++ b/templates/partials/_card.html.twig
@@ -1,5 +1,8 @@
-{# {{appartment.title}} #}
-
-{# {{appartment.description}} #}
-
-{  }
+<div class="card">
+  <img src="https://placeimg.com/640/480/arch" alt="Airbnb" class="card-img-top">
+  <div class="card-body">
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+  </div>
+</div>
