--- a/templates/appartment/all.html.twig
+++ b/templates/appartment/all.html.twig
@@ -14,6 +14,7 @@
     {% for appartment in allAppartment %}
 
         {% include 'partials/_card.html.twig' %}
+        {# {% include 'partials/_nav.html.twig' %} #}
 
     {% endfor %}
 
