--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -2,14 +2,73 @@
 
 {% block title %}Hello AppartmentController!{% endblock %}
 
+{% block stylesheets %}
+  <link rel="stylesheet" href="\css\card.css">
+{% endblock %}
+
 {% block body %}
 
-    {% for appartment in allAppartment %}
+<div class="card1">
+  {# <img src="\assets\Freezer.jpg" alt="Freezer" class="card2"> #}
 
-        {% include 'partials/_card.html.twig' %}
-        {# {% include 'partials/_nav.html.twig' %} #}
 
-    {% endfor %}
+<div class="description">
+  <img src="\assets\Freezer.jpg" alt="Freezer" class="card2">
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+</div>
+
+<div class="description">
+  <img src="\assets\Freezer.jpg" alt="Freezer" class="card2">
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+</div>
+
+<div class="description">
+  <img src="\assets\Freezer.jpg" alt="Freezer" class="card2">
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+</div>
+
+<div class="description">
+  <img src="\assets\Freezer.jpg" alt="Freezer" class="card2">
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+</div>
+
+<div class="description">
+  <img src="\assets\Freezer.jpg" alt="Freezer" class="card2">
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+</div>
+
+<div class="description">
+  <img src="\assets\Freezer.jpg" alt="Freezer" class="card2">
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+</div>
+
+<div class="description">
+  <img src="\assets\Freezer.jpg" alt="Freezer" class="card2">
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+</div>
+
+<div class="description">
+  <img src="\assets\Freezer.jpg" alt="Freezer" class="card2">
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+</div>
+
+</div>
 
 </div>
 {% endblock %}
