--- a/templates/partials/_card.html.twig
+++ b/templates/partials/_card.html.twig
@@ -1,8 +1,24 @@
-<div class="card">
+{# <div class="card">
   <img src="https://placeimg.com/640/480/arch" alt="Airbnb" class="card-img-top">
   <div class="card-body">
     <h5 class="card-title">Airbnb Title</h5>
     <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
     <a href="#" class="btn btn-primary">Book Now</a>
   </div>
+</div> #}
+{# {% extends 'base.html.twig' %}
+
+{% block stylesheets %}
+        <link rel="stylesheet" href="\css\card.css">
+{% endblock %}
+
+{% block body %}
+<div class="card1">
+  <img src="\assets\Freezer.jpg" alt="Freezer" class="card2">
+  <div>
+    <h5 class="card-title">Airbnb Title</h5>
+    <p class="card-text">Description of Airbnb with all kinds of attractions based on the location of the accommodation.</p>
+    <a href="#" class="btn btn-primary">Book Now</a>
+  </div>
 </div>
+{% endblock %} #}
