--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        <link rel="stylesheet" href="{{ asset('css/style.css')}}">
+        <link rel="stylesheet" href="\css\style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+</head>
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -14,6 +16,28 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
+    <header>
+    <nav class="navbar">
+  <ul>
+    <li><img class="airbnb" src="/assets/images/Airbnb.png" alt="Airbnb"></li>
+    {# <li class="barre">
+      <form>
+        <input type="text" placeholder="Ajouter des voyageurs">
+        <button type="submit">Rechercher</button>
+      </form>
+    </li> #}
+    <div class="search-bar">
+      <input type="text" placeholder="Ajouter des voyageurs">
+      <button type="submit"><i class="fa fa-search"></i>
+      </button>
+    </div>
+    <div class="menu">
+    <li class="menu1"><a href="#">Inscription</a></li>
+    <li class="menu1"><a href="#">Connexion</a></li>
+    </div>
+  </ul>
+</nav>
+    </header>
     <body>
         {% include 'partials/_nav.html.twig' %}
 
