--- a/templates/partials/_nav.html.twig
+++ b/templates/partials/_nav.html.twig
@@ -1,10 +1,9 @@
-<nav class="navbar">
+{# <nav class="navbar">
   <ul>
     <li><a href="{{ path('app_index') }}">Accueil</a></li>
     <li><a href="{{ path('app_appartment_index') }}">Hébergements</a></li>
     <li><a href="#">Expériences</a></li>
     <li><a href="#">Destinations</a></li>
     <li><a href="#">Réservations</a></li>
-    <li><a href="#">Aide</a></li>
   </ul>
-</nav>
+</nav> #}
